Added webGPU origin trial token to html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="origin-trial" content="ArzA6DCm7KzHH/wkT6Wni9+1HenWaCBytumVXu41yXAVVhsBTaoxo390AjHrqA6I8nRKjuUmi4U7vgTwBRSIOwoAAABNeyJvcmlnaW4iOiJodHRwczovL3VzZWJsb2Nrei5jb206NDQzIiwiZmVhdHVyZSI6IldlYkdQVSIsImV4cGlyeSI6MTY1MjgzMTk5OX0=">
     <link rel="icon" href="%PUBLIC_URL%/blocks.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Blockz"
+      content="Blockz timeblocking and productivity app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
